<resources>
    <string name="register_title">CADASTRO</string>
    <string name="btn_register">Cadastrar</string>
    <string name="go_to_login">Já tem uma conta? Login</string>
    <string name="login_title">LOGIN</string>
    <string name="hint_email">E-mail</string>
    <string name="login_button">Entrar</string>
    <string name="nao_tem_conta">Não tem uma conta? Crie uma</string>
    <string name="app_name">Cyberion Innovations</string>
    <string name="password_hint">Senha</string>
    <string name="hint_password">Senha</string>
    <string name="show_password">Mostrar Senha</string>
    <string name="hide_password">Esconder Senha</string>
    <string name="password_field">Campo de senha</string>
</resources>
