<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:background="@drawable/gradient_background"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textSize="26sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginBottom="24dp"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:background="@android:drawable/editbox_background"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        android:autofillHints="emailAddress" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="12dp"
        android:background="@android:drawable/editbox_background"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        android:autofillHints="password"
        android:layout_marginTop="12dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:text="@string/login_button"
        android:backgroundTint="@color/azul"
        android:textColor="@color/button_text_color"
        android:layout_marginTop="20dp"
        android:padding="12dp"/>

    <TextView
        android:id="@+id/tvGoToRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nao_tem_conta"
        android:textColor="@android:color/white"
        android:layout_marginTop="12dp"
        android:padding="16dp"
        android:clickable="true"
        android:focusable="true"
        android:importantForAccessibility="yes"/>

</LinearLayout>
